@@ -1,19 +1,20 @@
 package io.kestra.plugin.compress;
 
-import com.google.common.collect.ImmutableMap;
 import com.google.common.io.CharStreams;
+import io.kestra.core.junit.annotations.KestraTest;
+import io.kestra.core.models.property.Property;
 import io.kestra.core.runners.RunContextFactory;
 import io.kestra.core.storages.StorageInterface;
 import io.kestra.core.utils.TestsUtils;
-import io.kestra.core.junit.annotations.KestraTest;
+import jakarta.inject.Inject;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 
 import java.io.InputStreamReader;
 import java.net.URI;
+import java.util.Map;
 import java.util.stream.Stream;
-import jakarta.inject.Inject;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.is;
@@ -44,11 +45,11 @@ class FileDecompressTest {
         FileDecompress decompress = FileDecompress.builder()
             .id("unit-test")
             .type(ArchiveDecompress.class.getName())
-            .compression(compression)
-            .from(uri.toString())
+            .compression(Property.of(compression))
+            .from(Property.of(uri.toString()))
             .build();
 
-        FileDecompress.Output runDecompress = decompress.run(TestsUtils.mockRunContext(runContextFactory, decompress, ImmutableMap.of()));
+        FileDecompress.Output runDecompress = decompress.run(TestsUtils.mockRunContext(runContextFactory, decompress, Map.of()));
 
         assertThat(CharStreams.toString(new InputStreamReader(storageInterface.get(null, runDecompress.getUri()))), is("1"));
     }
